name:                visitor-counter
version:             0.1.0.0
homepage:            https://github.com/p-h/visitor-counter
license:             BSD3
license-file:        LICENSE
author:              Philippe Hürlimann
maintainer:          phihue@gmail.com
copyright:           2018 Philippe Hürlimann
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable visitor-counter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , hostname
                     , scotty
                     , blaze-html
                     , hedis
